<resources>
    <string name="app_name">DinnerHalp</string>
    <string name="package_name">com.gmail.mlwhal.dinnerhalp</string>
    <string name="action_add_dinner">Add dinner</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_manage">Manage dinners</string>
    <string name="action_save">Save</string>
    <string name="action_search">New search</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Search</string>
    <string name="title_section2">Manage</string>
    <string name="tab_layout">Tab Layout goes here</string>
    <string name="search_title">Search dinners by</string>
    <string-array name="search_array">
        <item>Keyword</item>
        <item>Cooking method</item>
        <item>Prep/cook time</item>
        <item>Servings</item>
        <item>Show all</item>
    </string-array>
    <string name="image_item_icon">List item icon</string>
    <string name="manage_dinners_title">Manage dinners</string>
    <string-array name="manage_dinners_array">
        
        <item>View/edit/delete</item>
        <item>Delete all</item>
        <item>Backup database file</item>
        <item>Restore database file</item>
        <item>Share database file</item>
        <item>Import database file</item>
    </string-array>
    <string name="delete_db_alert_title">Delete all dinners? There\'s no turning back!</string>
    <string name="delete_db_cancel_toast">Nothing was deleted</string>
    <string name="backup_db_success">File copied to storage</string>
    <string name="backup_db_fail">Couldn\'t copy file to storage</string>
    <string name="backup_db_file_deleted">One old backup was deleted; go to Settings to change
    this</string>
    <string name="backup_db_files_deleted">Old backups were deleted; go to Settings to change this</string>
    <string name="restore_alert_title">Restore an older database file?</string>
    <string name="restore_alert_text">You will lose any changes you made since that backup.</string>
    <string name="restore_positive_button_1">Restore backup file</string>
    <string name="restore_positive_button_recent">Restore most recent file</string>
    <string name="restore_neutral_button">Choose file to restore</string>
    <string name="restore_success_alert">Backup has been restored</string>
    <string name="restore_cancel_alert">Action was canceled</string>
    <string name="restore_nobackup_alert">There are no backup files to restore from</string>
    <string name="choose_backup_alert_title">Choose a backup to restore</string>
    <string name="choose_backup_alert_text">This overwrites changes made since the backup was created!</string>
    <string name="import_alert_title">Import a different database file?</string>
    <string name="import_alert_text">This will overwrite your current file.</string>
    <string name="import_positive_button">Import</string>
    <string name="import_chooser_title">Import from</string>
    <string name="import_success_alert">File was imported successfully</string>
    <string name="import_cancel_alert">Import was canceled</string>
    <string name="filename_sharedb">dinnerData</string>
    <string name="filename_full_sharedb">dinnerData.db</string>
    <string name="date_format">yyyyMMdd_HH-mm</string>
    <string name="sharedb_title">Share database</string>
    <string name="sharedb_no_backup">Couldn\'t share the database, something went wrong</string>
    <string name="intent_sharedb_subject">DinnerHalp database file</string>
    <string name="intent_sharedb_message">Here\'s the database file from my DinnerHalp app.</string>
    <string name="keyword_alert_title">Search for &#8230;</string>
    <string name="keyword_hint">Keyword</string>
    <string name="method_alert_title">Method</string>
    <string-array name="method_array">
        <item>Stovetop</item>
        <item>Oven</item>
        <item>Slow cooker</item>
        <item>Grill</item>
    </string-array>
    <string name="time_alert_title">Prep/cook time</string>
    <string-array name="time_array">
        <item>Quick (&lt;30 min)</item>
        <item>Slow (&gt;30 min)</item>
    </string-array>
    <string name="servings_alert_title">Number of meals</string>
    <string-array name="servings_array">
        <item>One meal</item>
        <item>Multiple meals</item>
    </string-array>
    <string name="title_activity_add_dinner">AddDinnerActivity</string>
    <string name="add_dinner_title">Add a dinner</string>
    <string name="update_dinner_title">Update dinner</string>
    <string name="dinner_add_hint">You can choose how to save \nimages in the Settings menu</string>
    <string name="dinner_name_hint">Dinner name</string>
    <string name="button_done">Done</string>
    <string name="spinner_method_descrip">Choose cooking method</string>
    <string name="spinner_time_descrip">Choose cooking time</string>
    <string name="spinner_servings_descrip">Choose number of servings</string>
    <string name="image_add_datemade">Add a date for this dinner</string>
    <string name="image_clear_datemade">Remove date from dinner</string>
    <string name="text_datemade">Add a date</string>
    <string name="text_datechosen">Last made\n%1$s</string>
    <string name="datemade_key">datemade_key</string>
    <string name="image_add_picture">Add picture</string>
    <string name="image_change_picture">Change picture</string>
    <string name="image_remove_picture">Remove picture</string>
    <string name="image_remove_alert_title">Remove the image?</string>
    <string name="image_remove_alert_message">It will no longer be shown when you view
    this dinner. (This doesn\'t delete the image from your phone, just from the database.)</string>
    <string name="alert_dialog_remove_img_ok">Remove</string>
    <string name="toast_image_removed">Image has been removed</string>
    <string name="recipe_hint">Recipe or keywords</string>
    <string name="toast_not_unique">Dinner name must be unique to be saved!</string>
    <string name="toast_no_dinner_name">Dinners gotta have names!</string>
    <string name="toast_dinner_saved">\u0020saved</string>
    <string name="share_alert_title">Make the first line of shared text the dinner name?</string>
    <string name="alert_dialog_share_ok">Yes</string>
    <string name="alert_dialog_share_no">No</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_search">Search</string>
    <string name="button_save">Save</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dinner_list">DinnerListActivity</string>
    <string name="dinner_list_title">Dinners</string>
    <string name="dinner_list_hint">Press and hold to select \nmultiple dinners</string>
    <string name="button_help">\?</string>
    <string name="button_ok">Got It</string>
    <string name="spinner_sort">Sort list of dinners</string>
    <string name="no_dinners">No dinners found! Tap to add.</string>
    <string name="image_no_dinners">Tap to add a new dinner</string>
    <string name="title_activity_view_dinner">ViewDinnerActivity</string>
    <string name="intent_share_subject">Recipes from DinnerHalp</string>
    <string name="intent_share_dialog_title">Share to &#8230;</string>
    <string name="sort_by_name_key">sort_by_name</string>
    <string name="sort_asc_key">"sort_asc"</string>
    <string name="view_dinner_title">Dinner name here</string>
    <string name="dinner_view_hint">You can control screen timeout in the \nSettings menu</string>
    <string name="spinner_method">Cooking method</string>
    <string name="spinner_time">Cooking time</string>
    <string name="spinner_servings">Servings</string>
    <string name="text_content_datemade">Date last made</string>
    <string name="image_dinner_picture">Picture of current dinner</string>
    <string name="text_no_recipe">No recipe or keywords</string>
    <string name="intent_share_recipe">Share recipe to &#8230;</string>
    <string name="toast_image_exception">Image can\'t be shown until path is updated</string>
    <string name="delete_alert_title">Delete this dinner?</string>
    <string name="alert_dialog_delete_ok">Delete</string>
    <string name="batch_delete_alert_title">Delete selected dinners?</string>
    <string name="date_alert_choose">Set a date</string>
    <string name="date_alert_clear_title">Remove date from this dinner?</string>
    <string name="date_alert_clear_message">This action can\'t be undone.</string>
    <string name="alert_dialog_remove">Remove</string>
    <string name="pref_change_method_title">Custom categories</string>
    <string name="pref_change_method_sum">Change the list of cooking methods</string>
    <string name="pref_image_size_title">Image size</string>
    <string name="pref_image_size_sum">Set the size of images when viewing dinner \nCurrently
    showing: %s size</string>
    <string name="pref_image_size_key">pref_image_size</string>
    <string name="pref_image_size_dialog_title">Set image size to</string>
    <string name="pref_image_size_default">40</string>
    <string name="pref_switch_image_storage_title">Save images inside the database</string>
    <string name="pref_switch_image_storage_sum_off">Images will be linked, not saved; this
    takes up less space but sometimes links get lost</string>
    <string name="pref_switch_image_storage_sum_on">Images will be stored in the dinner
    database; this takes up more space but images won\'t ever get lost</string>
    <string name="pref_switch_image_storage_key">pref_image_storage</string>
    <string name="pref_backup_number_title">Keeping backup files</string>
    <string name="pref_backup_number_sum">Set the number of backups to save; the oldest file will be deleted
    automatically when a new backup is made \nCurrently saving %s</string>
    <string name="pref_backup_number_key">pref_backup_number</string>
    <string name="pref_backup_number_dialog_title">Number of files to keep</string>
    <string name="pref_backup_number_default">5</string>
    <string name="pref_switch_timeout_title">Screen timeout</string>
    <string name="pref_switch_timeout_sum">Allow screen to timeout when viewing a dinner</string>
    <string name="pref_switch_timeout_sum_on">Screen will turn off as usual when viewing a dinner</string>
    <string name="pref_switch_timeout_sum_off">Screen will stay on when viewing a dinner</string>
    <string name="pref_switch_timeout_key">pref_switch_timeout</string>
    <string name="pref_switch_promode_title">Pro user mode</string>
    <string name="pref_switch_promode_sum">Hide all on-screen tips</string>
    <string name="pref_switch_promode_sum_on">On-screen tips are hidden</string>
    <string name="pref_switch_promode_sum_off">On-screen tips are shown</string>
    <string name="pref_switch_promode_key">pref_switch_promode</string>
    <string name="pref_theme_title">App theme</string>
    <string name="pref_theme_sum">Change the app theme \nCurrently set to: %s</string>
    <string name="pref_theme_key">pref_theme</string>
    <string name="pref_theme_dialog_title">Set app theme to</string>
    <string name="pref_theme_default">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="pref_aboutapp_title">About DinnerHalp</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="about_app_title">About DinnerHalp</string>
    <string name="about_app_class">com.gmail.mlwhal.dinnerhalp.AboutAppActivity</string>
    <string name="text_about_app">DinnerHalp 1.11 by Marika Whaley \ncopyright 2015–2026</string>
    <string name="image_dinnerhalp_icon">DinnerHalp app icon</string>
    <string name="title_activity_settings">Settings</string>
    <string name="toast_filenotfound">No image file was found, please pick a new one</string>
</resources>