<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gmail.mlwhal.dinnerhalp.DinnerListActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touch_target_min"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/button_help"
            android:paddingBottom="8dp"
            android:text="@string/dinner_list_title"
            style="@style/HeaderText" />

        <TextView android:id="@id/button_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/button_help"
            style="@style/MedButton"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="16dp"
            android:layout_gravity="center_vertical"
            android:text="@string/dinner_list_hint"
            style="@style/HintText"/>

        <TextView android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/button_ok"
            style="@style/SmallButton"/>

    </LinearLayout>

    <ListView android:id="@+id/listview_dinners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DinnerListText"
        />

    <FrameLayout android:id="@+id/listview_empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageButton android:id="@+id/button_add_dinner"
            android:contentDescription="@string/image_no_dinners"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="-32dp"
            android:paddingEnd="0dp"
            android:src="@drawable/ic_add_dinner"
            style="?android:borderlessButtonStyle"
            />

        <TextView android:id="@+id/textview_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:paddingTop="64dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/no_dinners"
            android:textColor="@color/colorDefaultText"/>

    </FrameLayout>

</LinearLayout>
